# devcontainers

./: .editorconfig  .gitignore  CLAUDE.md  LICENSE  README.md  SECURITY.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  cve_or_dep.yml  feature_request.yml
.github/workflows/: build.yml
base/: .dockerignore  Dockerfile
base/home/: .zshrc
base/home/.config/: starship.toml
base/templates/.devcontainer/: devcontainer.json
python/: .dockerignore  Dockerfile
python/templates/: .pre-commit-config.yaml  pyproject.toml
python/templates/.devcontainer/: .gitignore  compose.override.yaml.example  compose.yaml  devcontainer.json
python/templates/.zed/: settings.json
scripts/: verify-image.sh
tsjs/: .dockerignore  Dockerfile
tsjs/templates/: .npmrc  biome.json  bunfig.toml  package.json  tsconfig.json
tsjs/templates/.devcontainer/: compose.override.yaml.example  compose.yaml  devcontainer.json
tsjs/templates/.zed/: settings.json
